<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayoutTimeframeModeButtons"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="#B9B9B9"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

		<ImageButton
		    android:layout_width="0dp"
		    android:layout_height="fill_parent"
		    android:layout_weight="0.5"
		    android:visibility="invisible"
		    android:scaleType="center"
		    android:contentDescription="@string/empty" />
        
		
		<com.sebnarware.avalanche.SegmentedRadioGroup
		    android:layout_width="0dp"
		    android:layout_height="fill_parent"
		    android:layout_weight="3"
		    android:layout_margin="5dp"
		    android:checkedButton="@+id/buttonToday"
		    android:orientation="horizontal">

		    <RadioButton android:id="@id/buttonToday"
		        android:layout_width="0dp"
		        android:layout_height="fill_parent"
		        android:layout_weight="1"
		        android:gravity="center"
				android:textColor="@color/radio_colors"
		        android:textAppearance="?android:attr/textAppearanceSmall"
				android:button="@null"
		        android:text="@string/button_today"
		        android:onClick="setTimeframeToToday" />

		    <RadioButton android:id="@+id/buttonTomorrow"
		        android:layout_width="0dp"
		        android:layout_height="fill_parent"
		        android:layout_weight="1"
		        android:gravity="center"
				android:textColor="@color/radio_colors"
		        android:textAppearance="?android:attr/textAppearanceSmall"
				android:button="@null"
		        android:text="@string/button_tomorrow"
		        android:onClick="setTimeframeToTomorrow" />
		    
		   <RadioButton android:id="@+id/buttonTwoDaysOut"
		        android:layout_width="0dp"
		        android:layout_height="fill_parent"
		        android:layout_weight="1"
		        android:gravity="center"
				android:textColor="@color/radio_colors"
		        android:textAppearance="?android:attr/textAppearanceSmall"
				android:button="@null"
		        android:text="@string/button_two_days_out"
		        android:onClick="setTimeframeToTwoDaysOut" />
		    		    
		</com.sebnarware.avalanche.SegmentedRadioGroup>
	 
		<ImageButton
		    android:layout_width="0dp"
		    android:layout_height="fill_parent"
		    android:layout_weight="0.5"
		    android:background="#B9B9B9"
		    android:onClick="onInfoButtonClick"
		    android:scaleType="center"
		    android:contentDescription="@string/button_info_content_description"
		    android:src="@drawable/action_about" />
		         
    </LinearLayout>

    <com.google.android.maps.MapView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mapview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/linearLayoutTimeframeModeButtons"
        android:layout_above="@+id/imageviewLegend"
        android:clickable="true"
        android:apiKey="@string/map_key_debug" />
    <!-- NOTE be sure to set set the api key above to either map_key_debug or map_key_production -->
    
    <ImageView
        android:id="@id/imageviewLegend"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:background="#B9B9B9"
        android:contentDescription="@string/image_view_legend_content_description"
        android:src="@drawable/legend4" />

</RelativeLayout>